Added Token counts